--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Solo, a Jekyll Theme
-tag_text: Solo
-description: Solo is a Jekyll theme that supports single-page websites only, but supports them well. Yes, it’s responsive.
+title: About
+tag_text: Jungmo Ahn
+description: C, Python, Embedded System, Image Classification, Smart Devices and whatnot..
 
 # Build settings
 markdown: kramdown
